<resources>
    <string name="app_name">Offerta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_product">LAST PRODUCTS</string>
    <string name="Currency">SAR</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="skip">SKIP</string>
    <string name="facebook_app_id">2216267691924232</string>
    <string name="fb_login_protocol_scheme">fb2216267691924232</string>


    <string name="title_activity_maps">Map</string>
    <string name="MobileNull">Please Inter your mobile phone</string>
    <string name="PassNull">Please inter your password</string>
    <string name="NameNull">Please inter your name</string>
    <string name="EmailNull">Please inter your Email</string>
    <string name="EmailValid">Email not valid</string>
    <string name="size">Size</string>
    <string name="text_test">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ChoiceSize">Please select the product size</string>
    <string name="ChoiceColor">Please select the product color</string>
    <string name="stars_product">STARED PRODUCTS</string>
    <string name="SAR">(SAR)</string>
    <string name="pay_now">Pay Now</string>
    <string name="TOTAL">TOTAL</string>
    <string name="Continue_Shipping">Continue Shipping</string>
    <string name="CASH">CASH</string>
    <string name="PAYMENT">E-PAYMENT</string>
    <string name="ADD_NEW_PLACE">ADD NEW PLACE</string>
    <string name="ChoosePlace">Choose Place</string>
    <string name="PAY_SEND_ORDER"><![CDATA[PAY & SEND ORDER]]></string>
    <string name="turn_on">Please turn on the high accuracy GSP mode</string>
    <string name="place_hint">Place automatically view here</string>
    <string name="SAVE_CONTINUE"><![CDATA[SAVE & CONTINUE]]></string>
    <string name="add_place">Add Place</string>
    <string name="TRACK_ORDER">TRACK ORDER</string>
    <string name="ORDER">ORDER</string>
    <string name="SEE_INVOICE">SEE INVOICE</string>
    <string name="Price">Price</string>
    <string name="Delivery_price">Delivery price</string>
    <string name="Coupon_rate">Coupon rate</string>
    <string name="Discount_value">Discount value</string>
    <string name="Total">Total ( SAR )</string>
    <string name="PERSONAL">PERSONAL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="First_Name">Your Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile No.</string>
    <string name="GET_NOTIFICATIONS">GET NOTIFICATIONS?</string>
    <string name="Own_Places">Own Places</string>
    <string name="ADD_NEW">ADD NEW</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Re_New_Password">Re-New Password</string>
    <string name="SAVE">SAVE</string>
    <string name="NewPassError">Please enter old password please</string>
    <string name="OldPassError">Please enter new password please</string>
    <string name="RePassError">Please enter re-new password please</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="Welcome">Welcome,</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="HOME">HOME</string>
    <string name="CART">CART</string>
    <string name="MY_ORDER">MY ORDER</string>
    <string name="NOTIFICATIONS">NOTIFICATIONS</string>
    <string name="CATEGORIES">CATEGORIES</string>
    <string name="FAVORITE">FAVORITE</string>
    <string name="ABOUT_APP">ABOUT APP</string>
    <string name="Category">Category</string>
    <string name="SubCategory">Sub Category</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="ChoiceCat">Please select first Main Category</string>
    <string name="APPLY_FILTER">APPLY FILTER</string>
    <string name="ProductNull">No products result</string>
    <string name="delete_item">Are you sure to delete this item from  favorite?</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="logOut">Are you sure to come out ?</string>
    <string name="NotConniction">Internet connection not found please try again later</string>
    <string name="OrderCompleted">Order Completed</string>
    <string name="LANGUAGE">ENGLISH</string>
    <string name="FILTER">FILTER</string>
    <string name="clickExit">Please click BACK again to exit</string>
    <string name="order_list">Order List</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Payment_method">Payment method</string>
    <string name="Coupon_used">Coupon used</string>
    <string name="Date">Date</string>
    <string name="Pending">Pending</string>
    <string name="Processing">Processing</string>
    <string name="Completed">Completed</string>
    <string name="Done">DONE !</string>
    <string name="SEARCH">SEARCH</string>
    <string name="NoPay">No product found to pay</string>
    <string name="Tax">Tax ( SAR )</string>
    <string name="FinalTotalSize">Final Total ( SAR )</string>
    <string name="shipping">Shipping</string>
    <string name="CopleteData">Please complete your profile to complete  pay !</string>
    <string name="logIn">LOG IN</string>
    <string name="ChoiceLocation">Please choice Location</string>
    <string name="LogIn">Are you sure to Log In?</string>
</resources>
