<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personal_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/First_Name"
        style="@style/edit_person"
        android:hint="@string/First_Name"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Last_Name" />


    <EditText
        android:id="@+id/Email"
        style="@style/edit_person"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@+id/First_Name"
        android:nextFocusDown="@+id/Mobile" />

    <EditText
        android:id="@+id/Mobile"
        style="@style/edit_person"
        android:hint="@string/Mobile"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@+id/Email" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/notification_shape"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <Switch
            android:id="@+id/switchNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/GET_NOTIFICATIONS"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/Own_Places"
            android:textColor="@android:color/black"
            android:fontFamily="@font/sf_pro_text_medium"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/add_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawableStart="@drawable/add_new"
            android:drawablePadding="10dp"
            android:text="@string/ADD_NEW"
            android:fontFamily="@font/sf_pro_text_medium"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/LocationRecycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
