<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="11dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/Delivery_Address"
        android:textColor="@color/delever_color"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Delivery_Address"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Payment_method"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/delever_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.3dp"
                android:text="@string/CASH"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Coupon_used"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/delever_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/Coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.3dp"
                android:text=" -50 %"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/delever_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.3dp"
                android:text="@string/CASH"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="19dp"
        android:paddingEnd="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/Price"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/price_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Price"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DDDDDD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Delivery_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/Delivery_price"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Delivery_price_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Price"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DDDDDD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Coupon_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/Coupon_rate"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Coupon_rate_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Price"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textColor="#C31515"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DDDDDD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Discount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/Discount_value"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="#111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Discount_value_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Price"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textColor="#C31515"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DDDDDD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/Total"
                android:textColor="#111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Total_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/sf_pro_text_bold"
                android:layout_marginTop="0dp"
                android:text="@string/Price"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_item_lay"
        android:background="#F7F8FA"
        android:paddingStart="11dp"
        android:paddingTop="13dp"
        android:paddingEnd="11dp"
        android:paddingBottom="13dp"
        android:text="@string/order_list"
        android:fontFamily="@font/sf_pro_text_bold"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text" />
</LinearLayout>