<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/password_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:visibility="gone"
    android:paddingTop="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/New_Password"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Old_Password"
            style="@style/edit_person"
            android:hint="@string/Old_Password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/New_Password"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/New_Password"
            style="@style/edit_person"
            android:hint="@string/New_Password"
            android:inputType="textPassword"
            android:nextFocusUp="@+id/First_Name"
            android:nextFocusDown="@+id/Re_New_Password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPilotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/New_Password"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Re_New_Password"
            style="@style/edit_person"
            android:hint="@string/Re_New_Password"
            android:inputType="textPassword"
            android:nextFocusUp="@+id/New_Password" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>