<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/dialog_shape">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/delete_icon" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/delete_item"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <Button
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="9.2dp"
                android:layout_weight="1"
                android:background="@drawable/no_back"
                android:text="@string/NO"
                android:fontFamily="@font/sf_pro_text_medium"
                android:textColor="#676767" />

            <Button
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/yes_back"
                android:text="@string/YES"
                android:fontFamily="@font/sf_pro_text_medium"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>