<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Pending"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/text"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:src="@drawable/point_select" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Processing"
            android:textColor="@color/grayText"
            android:textSize="12sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:layout_below="@+id/text2"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:src="@drawable/point_un_select" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Completed"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:textColor="@color/grayText"
            android:textSize="12sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/text3"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:src="@drawable/point_un_select" />
    </RelativeLayout>

</LinearLayout>